[gd_scene load_steps=16 format=3 uid="uid://dx0jgljsjudkw"]

[ext_resource type="Script" path="res://resources/entity/enemy/worm/Worm.gd" id="1_edbqo"]
[ext_resource type="Texture2D" uid="uid://d0hxwytuvpcds" path="res://asset/visual/icon.svg" id="2_7mm1y"]
[ext_resource type="Shader" path="res://resources/shaders/entity_mask.gdshader" id="2_x6g1n"]
[ext_resource type="Shader" path="res://resources/shaders/entity_sprite.gdshader" id="3_21vnr"]
[ext_resource type="PackedScene" uid="uid://xyf6s1q85yf2" path="res://resources/components/HealthComponent.tscn" id="4_ghmsk"]
[ext_resource type="PackedScene" uid="uid://dovx62msjlv1e" path="res://resources/overlap/detectionArea.tscn" id="5_l8kai"]
[ext_resource type="PackedScene" uid="uid://pamt1nvftqba" path="res://resources/overlap/hitbox.tscn" id="6_mt3oh"]
[ext_resource type="PackedScene" uid="uid://cbotoxu744vlj" path="res://resources/components/ParabolicShooterComponent.tscn" id="8_yfduj"]
[ext_resource type="PackedScene" uid="uid://0pg1nchydlbc" path="res://resources/entity/enemy/worm/WormProjectile.tscn" id="9_pes0a"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_2j1cv"]
shader = ExtResource("2_x6g1n")

[sub_resource type="ViewportTexture" id="ViewportTexture_1574g"]
viewport_path = NodePath("SubViewportContainer/SubViewport")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_m1m7j"]
shader = ExtResource("3_21vnr")

[sub_resource type="ViewportTexture" id="ViewportTexture_fxmqo"]
viewport_path = NodePath("SubViewportContainer/SubViewport")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6g1c3"]
size = Vector2(16, 16)

[sub_resource type="CircleShape2D" id="CircleShape2D_ku3ox"]
radius = 150.28

[node name="Worm" type="StaticBody2D"]
collision_layer = 0
script = ExtResource("1_edbqo")

[node name="SubViewportContainer" type="SubViewportContainer" parent="."]
offset_left = -16.0
offset_top = -16.0
offset_right = 1904.0
offset_bottom = 1064.0
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer"]
disable_3d = true
transparent_bg = true
handle_input_locally = false
snap_2d_transforms_to_pixel = true
snap_2d_vertices_to_pixel = true
canvas_item_default_texture_filter = 0
canvas_cull_mask = 4294966273
size = Vector2i(32, 32)
size_2d_override = Vector2i(32, 32)
render_target_update_mode = 4

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="SubViewportContainer/SubViewport"]
position = Vector2(16, 16)
animation = &""

[node name="Sprite2D" type="Sprite2D" parent="SubViewportContainer/SubViewport"]
position = Vector2(16, 16)
scale = Vector2(0.125, 0.125)
texture = ExtResource("2_7mm1y")

[node name="Mask" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_2j1cv")
texture = SubResource("ViewportTexture_1574g")

[node name="Sprite" type="Sprite2D" parent="."]
z_index = 100
material = SubResource("ShaderMaterial_m1m7j")
texture = SubResource("ViewportTexture_fxmqo")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="HealthComponent" parent="." instance=ExtResource("4_ghmsk")]

[node name="HurtBox" parent="." instance=ExtResource("5_l8kai")]
collision_mask = 8

[node name="Hitbox" parent="." instance=ExtResource("6_mt3oh")]
collision_layer = 16

[node name="CollisionShape2D" parent="Hitbox" index="0"]
shape = SubResource("RectangleShape2D_6g1c3")

[node name="AttackRange" parent="." instance=ExtResource("5_l8kai")]
collision_mask = 2

[node name="CollisionShape2D" parent="AttackRange" index="0"]
shape = SubResource("CircleShape2D_ku3ox")
debug_color = Color(0, 0.6, 0.701961, 0.419608)

[node name="Sprite2D" type="Sprite2D" parent="."]

[node name="ParabolicShooter" parent="." instance=ExtResource("8_yfduj")]
position = Vector2(0, -4)
projectile_scene = ExtResource("9_pes0a")

[node name="AttackTimer" type="Timer" parent="."]
process_callback = 0
wait_time = 2.0
autostart = true

[connection signal="area_entered" from="HurtBox" to="HealthComponent" method="_on_hurt_box_area_entered"]
[connection signal="body_entered" from="AttackRange" to="." method="_on_attack_range_body_entered"]
[connection signal="body_exited" from="AttackRange" to="." method="_on_attack_range_body_exited"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]

[editable path="Hitbox"]
[editable path="AttackRange"]
